--- a/Haralick.ipynb
+++ b/Haralick.ipynb
@@ -14,402 +14,12 @@
     "import cv2\n",
     "import matplotlib.pyplot as plt\n",
     "import time\n",
-    "%matplotlib inline\n",
-    "nt=10"
+    "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 248
-    },
-    "colab_type": "code",
-    "executionInfo": {
-     "elapsed": 687,
-     "status": "error",
-     "timestamp": 1550085680221,
-     "user": {
-      "displayName": "Luis Alvaro Rojas Machado",
-      "photoUrl": "",
-      "userId": "09658130117406377148"
-     },
-     "user_tz": 300
-    },
-    "id": "_WJrWeGWMjK7",
-    "outputId": "74c3d002-165b-4456-a8cd-4bed53e59437"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "False\n",
-      "sdasdsdasda\n"
-     ]
-    }
-   ],
-   "source": [
-    "cap = cv2.VideoCapture('./running/person01_running_d1_uncomp.avi')\n",
-    "if (cap.isOpened()== False):\n",
-    "    print(\"Error opening video stream or file\")\n",
-    "idx=0\n",
-    "while(cap.isOpened() && idx<nt):\n",
-    "    idx+=1\n",
-    "    #print('Frame N:', idx)\n",
-    "    ret, frame = cap.read()\n",
-    "    print(ret)\n",
-    "    if ret==False: break\n",
-    "    gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
-    "\n",
-    "    cv2.imshow('frame',gray)\n",
-    "    if cv2.waitKey(30) & 0xFF == ord('q'):\n",
-    "        break\n",
-    "print('sdasdsdasda')\n",
-    "cap.release()\n",
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +29,8 @@
     "ret, frame1 = cap.read()\n",
     "prvs = cv2.cvtColor(frame1,cv2.COLOR_BGR2GRAY)\n",
     "hsv = np.zeros_like(frame1)\n",
-    "delta=8\n",
+    "delta=4\n",
+    "omega=8\n",
     "hsv[...,1] = 255\n",
     "while(1):\n",
     "    ret, frame2 = cap.read()\n",
@@ -427,10 +38,10 @@
     "    next = cv2.cvtColor(frame2,cv2.COLOR_BGR2GRAY)\n",
     "    flow = cv2.calcOpticalFlowFarneback(prvs,next, None, 0.5, 3, 15, 3, 5, 1.2, 0)\n",
     "    mag, ang = cv2.cartToPolar(flow[...,0], flow[...,1])\n",
-    "    mag*=(np.uint8(np.abs(np.int16(next)-prvs))>30)\n",
-    "    #mag=np.floor(np.log2(mag))\n",
-    "    #mag=mag*(mag>0)*(np.min(mag,delta))\n",
+    "    mag=np.floor(np.log2(np.minimum(np.maximum(mag,1.4*np.ones_like(mag)),(2**delta)*np.ones_like(mag))))*(np.uint8(np.abs(np.int16(next)-prvs))>30)\n",
     "    \n",
+    "    ang/=np.max(ang)/omega\n",
+    "    ang=np.floor(ang)\n",
     "    hsv[...,0] = ang*180/np.pi/2\n",
     "    hsv[...,2] = cv2.normalize(mag,None,0,255,cv2.NORM_MINMAX)\n",
     "    bgr = cv2.cvtColor(hsv,cv2.COLOR_HSV2BGR)\n",
@@ -441,6 +52,168 @@
     "    elif k == ord('s'):\n",
     "        cv2.imwrite('opticalfb.png',frame2)\n",
     "        cv2.imwrite('opticalhsv.png',bgr)\n",
+    "    prvs = next\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/alvaro/anaconda3/lib/python3.6/site-packages/skimage/feature/texture.py:109: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  if np.issubdtype(image.dtype, np.float):\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "cap = cv2.VideoCapture(\"./running/person01_running_d1_uncomp.avi\")\n",
+    "\n",
+    "delta=4\n",
+    "omega=8\n",
+    "h=30\n",
+    "nt=30\n",
+    "ni=36 # cuboid size in x\n",
+    "nj=36 # cuboid size in y\n",
+    "hsv = np.zeros((nj,ni,3))\n",
+    "hsv[...,1] = 255\n",
+    "d=1\n",
+    "alpha=[0, np.pi/4, np.pi/2, 3*np.pi/4]\n",
+    "h_ang =[]\n",
+    "h_mag =[]\n",
+    "\n",
+    "#for each nt block(i*nt:(i+1)*nt)\n",
+    "ret, frame1 = cap.read()\n",
+    "#for each cuboid\n",
+    "inx=0 #begin o the cuboid in x\n",
+    "iny=0 #begin o the cuboid in y\n",
+    "prvs = cv2.cvtColor(frame1[iny:iny+nj,inx:inx+ni],cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "for i in range(nt):\n",
+    "#while(1):\n",
+    "    ret, frame2 = cap.read()\n",
+    "    if ret==False: break\n",
+    "    next = cv2.cvtColor(frame2[iny:iny+nj,inx:inx+ni],cv2.COLOR_BGR2GRAY)\n",
+    "    flow = cv2.calcOpticalFlowFarneback(prvs,next, None, 0.5, 3, 15, 3, 5, 1.2, 0)\n",
+    "    mag, ang = cv2.cartToPolar(flow[...,0], flow[...,1])\n",
+    "    mag=np.floor(np.log2(np.minimum(np.maximum(mag,1.4*np.ones_like(mag)),(2**delta)*np.ones_like(mag))))*(np.uint8(np.abs(np.int16(next)-prvs))>h)\n",
+    "    ang*=(np.uint8(np.abs(np.int16(next)-prvs))>h)\n",
+    "    if np.max(ang)!=0.0:\n",
+    "        ang/=np.max(ang)/omega\n",
+    "        \n",
+    "    ang=np.floor(ang)\n",
+    "    \n",
+    "    corr_ang = greycomatrix(ang.astype(int), [d], alpha,levels=9)\n",
+    "    corr_mag = greycomatrix(mag.astype(int), [d], alpha,levels=4)\n",
+    "    print(i)\n",
+    "    \n",
+    "    haralick_ang = []\n",
+    "    haralick_mag = []\n",
+    "    for j in range(len(alpha)):\n",
+    "        haralick_ang.append(mahotas.features.haralick(corr_ang[:,:,0,j]))\n",
+    "        haralick_mag.append(mahotas.features.haralick(corr_mag[:,:,0,j]))\n",
+    "        #print(haralick)\n",
+    "        \n",
+    "    \n",
+    "    h_ang.append(haralick_ang)\n",
+    "    h_mag.append(haralick_mag)\n",
+    "      \n",
+    "    mag2=cv2.normalize(mag,None,0,255,cv2.NORM_MINMAX)\n",
+    "    ang2=cv2.normalize(ang,None,0,255,cv2.NORM_MINMAX)\n",
+    "    cv2.imshow('mag',mag2)\n",
+    "    cv2.imshow('ang',mag)\n",
+    "    k = cv2.waitKey(20) & 0xff\n",
+    "    if k == 27:\n",
+    "        break\n",
+    "    elif k == ord('s'):\n",
+    "        cv2.imwrite('mag.png',mag2)\n",
+    "        cv2.imwrite('ang.png',mag)\n",
+    "    prvs = next\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "    \n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "cap = cv2.VideoCapture(\"./running/person01_running_d1_uncomp.avi\")\n",
+    "ret, frame1 = cap.read()\n",
+    "prvs = cv2.cvtColor(frame1,cv2.COLOR_BGR2GRAY)\n",
+    "hsv = np.zeros_like(frame1)\n",
+    "delta=4\n",
+    "omega=8\n",
+    "hsv[...,1] = 255\n",
+    "#while(1):\n",
+    "for i in range(30):\n",
+    "    ret, frame2 = cap.read()\n",
+    "    if ret==False: break\n",
+    "    next = cv2.cvtColor(frame2,cv2.COLOR_BGR2GRAY)\n",
+    "    flow = cv2.calcOpticalFlowFarneback(prvs,next, None, 0.5, 3, 15, 3, 5, 1.2, 0)\n",
+    "    mag, ang = cv2.cartToPolar(flow[...,0], flow[...,1])\n",
+    "    mag=np.floor(np.log2(np.minimum(np.maximum(mag,1.4*np.ones_like(mag)),(2**delta)*np.ones_like(mag))))*(np.uint8(np.abs(np.int16(next)-prvs))>30)\n",
+    "    ang*=(np.uint8(np.abs(np.int16(next)-prvs))>30)\n",
+    "    if np.max(ang)!=0.0:\n",
+    "        ang/=np.max(ang)/omega\n",
+    "    ang=np.floor(ang)\n",
+    "    mag=cv2.normalize(mag,None,0,255,cv2.NORM_MINMAX)\n",
+    "    ang=cv2.normalize(ang,None,0,255,cv2.NORM_MINMAX)\n",
+    "    \n",
+    "    cv2.imshow('mag',mag)\n",
+    "    #cv2.imshow('ang',ang)\n",
+    "    k = cv2.waitKey(100) & 0xff\n",
+    "    if k == 27:\n",
+    "        break\n",
     "    prvs = next\n",
     "cap.release()\n",
     "cv2.destroyAllWindows()"
